--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,25 @@
 {
-    "extends": ["airbnb", "prettier", "prettier/react"],
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "es6": true,
+        "node": true,
+        "jest": true
+    },
+    "extends": [
+        "airbnb-base",
+        "airbnb/rules/react",
+        "prettier",
+        "prettier/react"
+    ],
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 2018,
+        "ecmaVersion": 2020,
         "sourceType": "module"
     },
-    "plugins": ["prettier", "react", "react-hooks"],
+    "plugins": ["import", "prettier", "react", "react-hooks"],
     "settings": {
         "react": {
             "version": "detect"
@@ -15,6 +27,8 @@
     },
     "ignorePatterns": ["node_modules/"],
     "rules": {
+        "react/jsx-uses-react": "off",
+        "react/jsx-filename-extension": "off",
         "react/react-in-jsx-scope": "off"
     },
     "overrides": [
