--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npx lint-staged"
+      "pre-commit": "npx eslint --cache --fix"
     }
   },
   "lint-staged": {
