--- a/.prettierrc
+++ b/.prettierrc
@@ -4,6 +4,6 @@
     "useTabs": false,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": 'all',
-    "endOfLine": 'lf'
+    "trailingComma": "all",
+    "endOfLine": "auto"
 }
