--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,7 @@
     "semi": false,
     "singleQuote": true,
     "trailingComma": "all",
-    "endOfLine": "auto"
+    "endOfLine": "auto",
+    "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
+    "importOrderSeparation": true
 }
