--- a/jsconfig.json
+++ b/jsconfig.json
@@ -8,5 +8,5 @@
       "@config": ["./src/config"]
     }
   },
-  "exclude": ["node_modules", "**/node_modules/*"]
+  "exclude": ["node_modules", "**/node_modules/*", "build"]
 }
