--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
     "paths": {
       "@ui": ["./src/ui"],
       "@api": ["./src/api"],
-      "@config": ["./src/config"]
+      "@config": ["./src/config"],
+      "@utils": ["./src/utils"]
     }
   },
   "exclude": ["node_modules", "**/node_modules/*", "build"]
