--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@
 
 # misc
 .DS_Store
+.env
 .env.local
+.env.development
 .env.development.local
+.env.test
 .env.test.local
 .env.production.local
 
