--- a/.eslintrc
+++ b/.eslintrc
@@ -31,7 +31,8 @@
               ["@config", "./src/config"],
               ["@utils", "./src/utils"],
               ["@pages", "./src/pages"],
-              ["@components", "./src/components"]
+              ["@components", "./src/components"],
+              ["@hooks", "./src/hooks"]
             ]
           }
     },
@@ -40,6 +41,7 @@
         "no-use-before-define": "off",
         "react/jsx-uses-react": "off",
         "react/jsx-filename-extension": "off",
+        "react/jsx-props-no-spreading": "off",
         "react/react-in-jsx-scope": "off",
         "react/require-default-props": "off",
         "react-hooks/rules-of-hooks": "error",
