--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
     "@trivago/prettier-plugin-sort-imports": "^1.4.1",
     "eslint": "^7.17.0",
     "eslint-config-airbnb": "^18.2.1",
