--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,8 @@
               ["@utils", "./src/utils"],
               ["@pages", "./src/pages"],
               ["@components", "./src/components"],
-              ["@hooks", "./src/hooks"]
+              ["@hooks", "./src/hooks"],
+              ["@context", "./src/context"]
             ]
           }
     },
