--- a/jsconfig.json
+++ b/jsconfig.json
@@ -9,7 +9,8 @@
       "@utils": ["./src/utils"],
       "@pages": ["./src/pages"],
       "@components": ["./src/components"],
-      "@hooks": ["./src/hooks"]
+      "@hooks": ["./src/hooks"],
+      "@context": ["./src/context"]
     }
   },
   "exclude": ["node_modules", "**/node_modules/*", "build"]
